...
"button.reset" = "Start over";
"button.settings" = "Settings";
"button.done" = "Done";

// MARK: - Tab Bar

"tab.timer" = "Timer";
"tab.library" = "Library";
"tab.timer.accessibility" = "Timer for meditation";
"tab.library.accessibility" = "Guided meditations library";

// MARK: - State Messages

...
